fix. CSS Buttons Resalt on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,7 @@
     box-shadow: 0px 8px 24px 2px rgba(247, 60, 87, 0.40);
     transition: all 3000ms ease-in-out!important;
 }
+
+button {
+    outline: none;
+}
